<resources>
    <string name="app_name">All Component Code App</string>
    <string name="permission">Permission</string>
    <string name="multiple_permission">Multiple Permission</string>
    <string name="theme">Theme</string>
    <string name="todo">todo</string>
    <string name="blink">Blink</string>
    <string name="bounce">Bounce</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="move">Move</string>
    <string name="rotate">Rotate</string>
    <string name="sequential">Sequential</string>
    <string name="slide_up">Slide Up</string>
    <string name="slide_down">Slide Down</string>
    <string name="together">Together</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="zoom_in">Zoom In</string>
    <string name="animation">Animation</string>
    <string name="dialog">Dialog</string>
    <string name="tab_layout_with_view_pager">Tab Layout with View Pager</string>
    <string name="multiple_delete_item">Multiple Delete Item</string>
    <string name="video">Video</string>
    <string name="album">Album</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">No Data Found</string>
    <string name="progress_dialog">Progress Dialog</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="material_alert_dialog">Material Alert Dialog</string>
    <string name="theme_dialog">Theme Dialog</string>
    <string name="loading_dialog">Loading Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="light">light</string>
    <string name="dark">Dark</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="expansion_panel">Expansion Panel</string>
    <string name="search_bar">Search Bar</string>
    <string name="item">item</string>
    <string name="loading">Loading…</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="search">Search</string>
    <string name="search_view_with_menu">Search View with Menu</string>
    <string name="srNo">srNo</string>
    <string name="bottom_navigation_view">Bottom Navigation View</string>
    <string name="side_bar_navigation_view">Navigation Drawer</string>
    <string name="image_slider">Image Slider</string>
    <string name="image_slider_using_viewpager">Image Slider using ViewPager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="image_pick">Image Pick</string>
    <string name="one_select_image">One Select image</string>
    <string name="multiple_image_select">Multiple Image Select</string>
    <string name="recycler_view_animation">Recycler View Animation</string>

    <string name="up_to_down">Up To Down</string>
    <string name="right_to_left">Right To Left</string>
    <string name="down_to_up">Down To Up</string>
    <string name="left_to_right">left to right</string>

    <string name="item_up_to_down">Item Up To Down</string>
    <string name="item_right_to_left">Item Right To Left</string>
    <string name="item_down_to_up">Item Down To Up</string>
    <string name="item_left_to_right">Item Left To Right</string>

    <string name="refresh">Refresh</string>
    <string name="image_slider_with_dot">Image Slider With Dot</string>
    <string name="room_database">Room Database</string>
    <string name="firestore">Firestore</string>
    <string name="firebase">Firebase</string>
    <string name="all_authentication">All Authentication</string>
    <string name="google_ads">Google Ads</string>
    <string name="website_view">Website View</string>
    <string name="no_internet">No internet connection!</string>
    <string name="back_again_to_exit">Please click BACK again to exit</string>
    <string name="share_data">Share &amp; Copy Data</string>
    <string name="enter_the_link">Enter the link</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="share_multiple_image">Share Multiple Image</string>
    <string name="another_app_open">Another App Open</string>
    <string name="play_store">Play Store</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="github">Github</string>
    <string name="share_app">Share App</string>
    <string name="banner_ads">Banner Ads</string>
    <string name="interstitial_ads">Interstitial ads</string>
    <string name="rewarded_ads">Rewarded ads</string>
    <string name="bannerAdsId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitialAdsId">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewardedAdsId">ca-app-pub-3940256099942544/5224354917</string>
    <string name="interstitial_ads_with_one_time_view">Interstitial ads not showing with 3 second click button and Interstitial Ads with one time view go to main Activity an repeat</string>
    <string name="rewarded_amount">Rewarded Amount</string>
    <string name="all_installed_app">All Installed App</string>
    <string name="app_package_name">App Package Name</string>
    <string name="total_Installed_Apps">Total Installed Apps:</string>
    <string name="price">Price:</string>
    <string name="rs_85941">Rs.85941/-</string>
    <string name="dealer_price">Dealer Price:</string>
    <string name="rs_85641">Rs.85641/-</string>

    <string name="date_amp_time_picker">Date &amp; Time Picker</string>
    <string name="time_picker">Simple Time Picker</string>
    <string name="date_picker">Simple Date Picker</string>
    <string name="material_date_picker">Material Date Picker</string>
    <string name="material_time_picker">Material Time Picker</string>

    <string name="rate_us">Rate us</string>
    <string name="rate_app_title">Rate this App</string>
    <string name="rate_app_message">If you are enjoying our app, please take a moment to rate it on PlayStore. Thanks for your support!</string>
    <string name="rate_btn_pos">Rate Now</string>
    <string name="rate_btn_neg">Remind me later</string>
    <string name="rate_btn_nut">No, Thanks</string>
    <string name="download">Download</string>
    <string name="download_any_file">Download Any File</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="validate">validate</string>
    <string name="form_validation">Form Validation</string>
    <string name="enter_the_confirm_password">Enter the confirm Password</string>
    <string name="internet_is_available">Internet is Available</string>
    <string name="try_again">Try Again</string>
    <string name="check_internet">Check Internet</string>


</resources>