<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AnimationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/app_logo_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/blinkBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="?android:attr/buttonBarStyle"
                android:layout_weight="1"
                android:text="@string/blink"/>

            <Button
                android:id="@+id/bounceBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/bounce"
                style="?android:attr/buttonBarStyle" />

            <Button
                android:id="@+id/fade_inBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/fade_in"
                style="?android:attr/buttonBarStyle" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fade_outBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/fade_out"
                style="?android:attr/buttonBarStyle"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/move"
                android:id="@+id/moveBtn"
                style="?android:attr/buttonBarStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:id="@+id/rotateBtn"
                android:text="@string/rotate"
                style="?android:attr/buttonBarStyle" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:id="@+id/sequentialBtn"
                android:text="@string/sequential"
                style="?android:attr/buttonBarStyle"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:id="@+id/slide_downBtn"
                android:text="@string/slide_down"
                style="?android:attr/buttonBarStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:id="@+id/slide_upBtn"
                android:text="@string/slide_up"
                style="?android:attr/buttonBarStyle" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:id="@+id/togetherBtn"
                android:text="@string/together"
                style="?android:attr/buttonBarStyle"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:id="@+id/zoom_inBtn"
                android:text="@string/zoom_in"
                style="?android:attr/buttonBarStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:id="@+id/zoom_outBtn"
                android:text="@string/zoom_out"
                style="?android:attr/buttonBarStyle" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>